Fix content jumping from profile page to edit profile page.

--- a/project2-angular-anm/src/app/components/profile-page/profile-page.component.css
+++ b/project2-angular-anm/src/app/components/profile-page/profile-page.component.css
@@ -1,6 +1,25 @@
 *{
     color: rgb(136, 153, 166);
 }
+/* body {
+    background-color: rgb(20, 29, 38)
+} */
+
+#main-profile {
+    /* background-image:  linear-gradient(to right, rgba(32,1,34, 0.5) -23.76%, rgba(111,0,0, 0.4) 76.43%), url(https://images.unsplash.com/photo-1527862345617-bdedfa6392dd?ixlib=rb-0.3.5&s=a546b9c2ea5bcdadb669b1dab64155e5&auto=format&fit=crop&w=1950&q=80); */
+    background-color: rgb(20, 29, 38);
+    background-position: center center;
+    background-repeat:  no-repeat;
+    background-attachment: fixed;
+    background-size:  cover;
+    font-family: 'Montserrat', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    /* background: -webkit-linear-gradient(to right, #200122, #6f0000); Chrome 10-25, Safari 5.1-6 */
+    /* background: linear-gradient(to right, rgba(32,1,34, 0.6) 0%, rgba(111,0,0, 0.6) 0%); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    /* background-color: rgba(0, 0, 0, .5); */
+    height: 100%;
+    
+}
 
 img{
     object-fit: cover;
